--- a/client/package.json
+++ b/client/package.json
@@ -7,27 +7,21 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.17.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "firebase": "^12.6.0",
+    "firebase": "^12.5.0",
     "lucide-react": "^0.553.0",
-    "nodemon": "^3.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.6",
-    "react-scripts": "^5.0.1",
-    "react-with-firebase-auth": "^1.4.1",
+    "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon server/server.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +43,6 @@
   },
   "devDependencies": {
     "@types/react": "19.2.3",
-    "typescript": "4.9.5"
+    "typescript": "5.9.3"
   }
 }
